--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="message">Message</string>
     <string name="profile">Profile</string>
     <string name="contact">Contact</string>
+    <string name="phone">Phone</string>
+    <string name="delete">Delete</string>
+    <string name="msg_token_fmt">token: </string>
 </resources>
